# glish

./: CHANGES  COPYING  GLISH_RELEASE_NOTES  INSTALL  InterViews-sensor.patch  Makefile  Makefile.in  NEWS  README  configure  configure.in  glish-env
config/: architecture  glish.options.in  ldAix
contrib/epics/: EpicsChannel.cc  EpicsChannel.h  Makefile  main.cc
contrib/fortran/test/: Makefile  fort.f  fortran.h  main.cc
contrib/perl/ext/Glish/: Glish.xs  Makefile.PL
contrib/tkclient/: Makefile  TK_Client.cc  TK_Client.h  gbutton.tk  main.cc
editline/: COPYING  Makefile  Makefile.in  README  change.h  complete.c  config.h.in  editline.c  mkfile.in  sysos9.c  sysunix.c
editline/include/: editline.h  os9.h  unix.h
glish/: Agent.cc  Agent.h  BinOpExpr.cc  BinOpExpr.h  BuiltIn.cc  BuiltIn.h  COPYING  Changes  Channel.h  Client.cc  Client.cc.in  Complex.cc  Daemon.cc  Daemon.h  Dict.cc  Event.cc  Event.h  Executable.cc  Executable.h  Expr.cc  Expr.h  File.cc  File.h  Frame.cc  Frame.h  Func.cc  Func.h  Garbage.cc  Garbage.h  IValCtorKern.cc  IValCtorKern.cc~  IValCtorKern.h  IValue.cc  IValue.h  LdAgent.cc  LdAgent.cc.in  LdAgent.h  List.cc  LocalExec.cc  LocalExec.h  (+74 more)
glish/clients/: Makefile  Makefile.in  c_test_client.c  echo_client.cc  echo_mclient.cc  glishd.cc  glishd2.cc  multiplexer.cc  shell_client.cc  tell_glishd.cc  test_client.cc  test_glishd2.cc  timer.cc  tproxy.cc
glish/clients/glishtk/: GlishTk.cc  Makefile  comdefs.h  dynamic.in  glishtk.g  glishtk.mak.in  main.cc  main.cc.in  mkWidgets.cc  mkWidgets.h  shared.in  static.in  tkCanvas.cc  tkCanvas.h  tkCore.cc  tkCore.h  tkProxy.cc  tkUtil.cc  tkUtil.h
glish/clients/glishtk/include/Glish/: glishtk.h
glish/clients/glishtk/mkWidgets/: Combobox.tcl  pkgIndex.tcl
glish/clients/glishtk/mkWidgets/demos/: metademo.tcl
glish/clients/glishtk/pgplot/: Makefile  Makefile.in  configure  configure.in  pgplot.g  pgplot.g.in  tkPgplot.cc  tkPgplot.h
glish/clients/glishtk/pgplot/tkpgplot/: Makefile  Makefile.in  config.h.in  grexec.c  mkfile.in  pgxwin.c  tkpgplot.c
glish/clients/gtk/: Makefile  Makefile.in  comdefs.h  dynamic.in  gtk.g  main.cc  pgbuild  tkAgent.cc  tkAgent.h  tkCanvas.cc  tkCanvas.h  tkCore.cc  tkCore.h  tkPgplot.cc  tkPgplot.h  tkProxy.cc
glish/clients/gtk/include/Glish/: gtk.h
glish/clients/gtk/pgplot/: Makefile.in  configure  configure.in  pgplot.g  tkPgplot.cc  tkPgplot.h
glish/clients/make/: Makefile  Makefile.in  README  arch.c  bit.h  bmake.0  bmake.1  buf.c  buf.h  compat.c  cond.c  conf.h  config.h.in  configure  configure.in  dir.c  dir.h  for.c  getenv.c  hash.c  hash.h  install-sh  job.c  job.h  list.h  lst.h  machine.sh  main.c  make.c  make.h  make_client.cc  make_client.h  makefile.boot.in  mkdeps.sh  nonints.h  parse.c  pathnames.h  sigcompat.c  sprite.h  str.c  (+6 more)
glish/clients/make/PSD.doc/: Makefile  tutorial.ms
glish/clients/make/lst.lib/: Makefile  lstAppend.c  lstAtEnd.c  lstAtFront.c  lstClose.c  lstConcat.c  lstDatum.c  lstDeQueue.c  lstDestroy.c  lstDupl.c  lstEnQueue.c  lstFind.c  lstFindFrom.c  lstFirst.c  lstForEach.c  lstForEachFrom.c  lstInit.c  lstInsert.c  lstInt.h  lstIsAtEnd.c  lstIsEmpty.c  lstLast.c  lstMember.c  lstNext.c  lstOpen.c  lstRemove.c  lstReplace.c  lstSucc.c  makefile.boot.in
glish/clients/make/mk/: AIX.sys.mk  HP-UX.sys.mk  Linux.sys.mk  NetBSD.sys.mk  OSF1.sys.mk  README.1st  Solaris.sys.mk  SunOS.sys.mk  bsd.dep.mk  bsd.doc.mk  bsd.lib.mk  bsd.man.mk  bsd.nls.mk  bsd.own.mk  bsd.prog.mk  dep.mk  doc.mk  lib.mk  man.mk  obj.mk  own.mk  prog.mk  subdir.mk
glish/clients/rtk/: Makefile  Makefile.in  main.cc  rtk.g  tkAgent.cc  tkAgent.h  tkCanvas.cc  tkCanvas.h  tkPgplot.cc
glish/doc/: ADASS-95.ps  ICALEPCS-93.ps  USENIX-93.ps  USER-DOC.ps
glish/include/Glish/: Client.h  Complex.h  Dict.h  GlishType.h  List.h  Object.h  Proxy.h  Queue.h  Reporter.h  Str.h  Stream.h  ValCtor.h  ValCtorKern.h  ValKern.h  Value.h  VecRef.h  glish.h
glish/sysinfo/: darwin.cc  dummy.cc  hpux.cc  irix.cc  linux.cc  osf1.cc  solaris.cc  stub.cc
glish/tests/: cycle.g  fpe.g  scope.g
glish/tests/os/: alpha.c  sendfd.c  solaris.c
glish/tests/tk/: frame1.g  frame2.g  frame3.g  scrollbar1.g  scrollbar2.g
npd/: COPYING  Makefile  Makefile.in  auth.c  auth.h  change.h  config.h.in  genkey.c  md5.h  md5c.c  mkfile.in  npd.c  util.c  util.h
npd/include/Npd/: md5.h  npd.h  util.h
regx/: Makefile  change.h  common.c  commonp.h  config.h.in  cop.h  mkfile.in  mytry.c  regcomp.c  regcomp.h  regexec.c  sv.c  sv.h
regx/include/regx/: common.h  op.h  regexp.h
sos/: COPYING  Makefile  alloc.c  change.h  config.h.in  config_p.h.in  convert.cc  convert.h  header.cc  io.cc  list.cc  longint.cc  longint.h  mkfile.in  ref.cc  str.cc  types.cc
sos/include/sos/: alloc.h  generic.h  header.h  io.h  list.h  mdep.h  ref.h  sos.h  str.h  types.h
sos/test/io/: dec  in.cc  out.cc  sun  sun.i  vax
sos/test/vax/: dvaxf.cc  vaxf.cc
