AC_INIT(glish)

if test -z "$GLISHROOT"; then
   if test "x$prefix" = xNONE; then
       GLISHROOT="`pwd`"
    else
       GLISHROOT="$prefix"
    fi
fi
AC_SUBST(GLISHROOT)

if test -z "$NO_AUTH" && test -d npd && test -f npd/config.h.in; then
    GLISH_FLAGS="$GLISH_FLAGS -DAUTHENTICATE"
    GLISH_NPD="GLISH_NPD"
    AC_CONFIG_HEADER(glish/$ARCH/config.h:glish/config.h.in glish/$ARCH/config_p.h:glish/config_p.h.in npd/$ARCH/config.h:npd/config.h.in)
    if test -z "$KEYDIR"; then
        KEYDIR="$GLISHROOT/keys"
    fi
    AC_SUBST(KEYDIR)
    config/mkhier "$KEYDIR/hosts"
    chmod -f 750 "$KEYDIR/hosts"
    config/mkhier "$KEYDIR/users"
    chmod -f 770 "$KEYDIR/users"
else
    GLISH_NPD=""
    AC_CONFIG_HEADER(glish/$ARCH/config.h:glish/config.h.in glish/$ARCH/config_p.h:glish/config_p.h.in)
fi

    
dnl Checks for programs.
AC_PROG_CC
AC_C_CONST
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_YACC
AC_CHECK_PROG(RSH,remsh,remsh,rsh)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(libc.h sys/filio.h X11/fd.h sys/select.h sigLib.h unistd.h)
AC_CHECK_HEADERS(sys/signal.h vfork.h)
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(stdlib.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_CHECK_TYPE(malloc_t,void*)

dnl Checks for library functions.
AC_CHECK_LIB(bsd, main)
AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(inet, main)
AC_CHECK_LIB(nsl, main)
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_FUNC_VFORK
AC_CHECK_FUNC(random,AC_DEFINE(HAVE_RANDOM))
AC_CHECK_FUNC(lrand48,AC_DEFINE(HAVE_LRAND48))
AC_CHECK_FUNC(flock,AC_DEFINE(HAVE_FLOCK))
AC_CHECK_FUNC(lockf,AC_DEFINE(HAVE_LOCKF))
AC_CHECK_FUNCS(gethostname setrlimit waitpid strdup setsockopt)
AC_CHECK_FUNCS(sigprocmask uname)

if test -z "$NO_TK" && test -d rivet && test -f rivet/configure; then
    #--------------------------------------------------------------------
    #	Stolen from the Tk configure.in...
    #
    #	Locate the X11 header files and the X11 library archive.  Try
    #	the ac_path_x macro first, but if it doesn't find the X stuff
    #	(e.g. because there's no xmkmf program) then check through
    #	a list of possible directories.  Under some conditions the
    #	autoconf macro will return an include directory that contains
    #	no include files, so double-check its result just to be safe.
    #--------------------------------------------------------------------
    AC_PATH_X
    not_really_there=""
    if test "$no_x" = ""; then
        if test "$x_includes" = ""; then
    	AC_TRY_CPP([#include <X11/XIntrinsic.h>], , not_really_there="yes")
        else
    	if test ! -r $x_includes/X11/Intrinsic.h; then
    	    not_really_there="yes"
    	fi
        fi
    fi
    
    if test "$no_x" = "yes" -o "$not_really_there" = "yes"; then
        echo checking for X11 header files
        XINCLUDES="# no special path needed"
        AC_TRY_CPP([#include <X11/Intrinsic.h>], , XINCLUDES="nope")
        if test "$XINCLUDES" = nope; then
            dirs="/usr/unsupported/include /usr/local/include /usr/X386/include /usr/include/X11R4 /usr/X11R5/include /usr/include/X11R5 /usr/openwin/include /usr/X11/include /usr/sww/include"
            for i in $dirs ; do
    	    if test -r $i/X11/Intrinsic.h; then
    	        XINCLUDES=" -I$i"
    	    fi
            done
        fi
    else
        if test "$x_includes" != ""; then
    	XINCLUDES=-I$x_includes
        else
    	XINCLUDES="# no special path needed"
        fi
    fi
    if test "$XINCLUDES" = nope; then
      echo "Warning:  couldn't find any X11 include files."
      XINCLUDES="# no include files found"
    fi
    
    if test "$no_x" = yes; then
        XLIBSW=nope
        if test "$XLIBSW" = nope; then
    	dirs="/usr/unsupported/lib /usr/local/lib /usr/X386/lib /usr/lib/X11R4 /usr/X11R5/lib /usr/lib/X11R5 /usr/openwin/lib /usr/X11/lib /usr/sww/X11/lib"
    	for i in $dirs ; do
    	    if test -r $i/libX11.a; then
    		XLIBSW="-L$i -lX11"
    	    fi
    	done
        fi
    else
        if test "$x_libraries" = ""; then
    	XLIBSW=-lX11
        else
    	XLIBSW="-L$x_libraries -lX11"
        fi
    fi
    if test "$XLIBSW" = nope ; then
        AC_CHECK_LIB(Xwindow, XCreateWindow, XLIBSW=-lXwindow)
    fi
    if test "$XLIBSW" = nope ; then
        echo "Warning:  couldn't find the X11 library archive.  Using -lX11."
        XLIBSW=-lX11
    fi
    #--------------------------------------------------------------------
    GLISH_FLAGS="$GLISH_FLAGS -DGLISHTK"
    GLISH_INCL="$GLISH_INCL -I../../include/Rivet"
    GLISH_LIB="$GLISH_LIB -L../../rivet/rivet -lrivet"
    GLISH_TK="GLISH_TK"

    #------propagate the hostname on down--------------------------------
    ac_configure_args="$ac_configure_args --host=$ARCH"
    AC_CONFIG_SUBDIRS( rivet )
else
    XLIBSW=""
    XINCLUDES=""
    GLISH_TK=""
fi


AC_SUBST(XINCLUDES)
AC_SUBST(XLIBSW)
AC_SUBST(GLISH_FLAGS)
AC_SUBST(GLISH_INCL)
AC_SUBST(GLISH_LIB)
AC_SUBST(GLISH_TK)
AC_SUBST(GLISH_NPD)

AC_OUTPUT($ARCH/glish.options:config/glish.options.in npd/$ARCH/Makefile:npd/Makefile.in sds/$ARCH/Makefile:sds/Makefile.in editline/$ARCH/Makefile:editline/Makefile.in glish/$ARCH/Makefile:glish/Makefile.in glish/clients/$ARCH/Makefile:glish/clients/Makefile.in)
